# locallighteval

./: .gitignore  README.md  example_run.py  merge_lora.py  pyproject.toml
config/: clinical_summarization.yaml  config.yaml  dual_model_pipeline.yaml  prompts.yaml  quick_test.yaml  standard_eval.yaml
config/data/: default.yaml
config/inference/: default.yaml  few_shot.yaml
config/mode/: end_to_end.yaml  summarization.yaml
config/model/: default.yaml  llama2_7b.yaml
config/output/: default.yaml
locallighteval/: __init__.py  config.py  data_loader.py  inference.py  main.py  metrics.py  prompts.py  summarization.py  utils.py
